--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,32 +27,16 @@ services:
     env_file:
       - .env
     environment:
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_DB=${POSTGRES_DB}
     networks:
       - ponto-network
     restart: unless-stopped
 
-  pgadmin:
-    image: dpage/pgadmin4
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_EMAIL}
-      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PASSWORD}
-    ports:
-      - "5050:80"
-    depends_on:
-      - db
-    networks:
-      - ponto-network
-    restart: unless-stopped
-    volumes:
-      - pgadmin_data:/var/lib/pgadmin
+volumes:
+  postgres_data:
 
 networks:
   ponto-network:
     driver: bridge
-
-volumes:
-  postgres_data:
-  pgadmin_data:
